@@ -114,9 +114,9 @@ data:extend({
       "logistic-science-pack",
       "military-science-pack",
       "chemical-science-pack",
-      "sp-electronic-science-pack-1",
       "sp-geological-science-pack-1",
       "sp-material-science-pack-1",
+      "sp-electronic-science-pack-1",
 
       "sp-automation-science-pack-2",
       "sp-logistic-science-pack-2",
